WAVE test fixes contrast

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -176,7 +176,7 @@ h1.small {
 .order-cfm-subtitle  {
   font-weight: 500;
   font-size: 1.125rem;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 /* Cart navigation */
