--- a/src/css/imports/links.css
+++ b/src/css/imports/links.css
@@ -142,6 +142,7 @@ ul.breadcrumb li a:hover {
   text-decoration: underline;
   text-underline-offset: 5px;
   font-weight: 600;
+  cursor: pointer;
 }
 .uppercase {
   text-transform: uppercase;
